2011-01-28  Chang Shu  <chang.shu@nokia.com>

Reviewed by Andreas Kling.

        Unskipp auth.html after fix.
        https://bugs.webkit.org/show_bug.cgi?id=36688

        * platform/qt/Skipped:
2011-01-28  Chang Shu  <chang.shu@nokia.com>

        Reviewed by Andreas Kling.

        Reset NetworkAccessManager to clean up credentials from previous tests.
        This change causes no performance overhead either.
        https://bugs.webkit.org/show_bug.cgi?id=36688

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::DumpRenderTree::resetToConsistentStateBeforeTesting):
        (WebCore::DumpRenderTree::open):
        * DumpRenderTree/qt/DumpRenderTreeQt.h:

Canonical link: https://commits.webkit.org/67130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76958 268f45cc-cd09-0410-ab3c-d52691b4dbfc